--- a/starter/app/src/main/AndroidManifest.xml
+++ b/starter/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MountainMarkers"
         tools:targetApi="31">
+
+        <!-- TODO: Add meta-dat tag with MAPS_API_KEY -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
